infrastructure/k8s/databases/cockroachdb/stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cockroachdb
  namespace: thisjowi
spec:
  serviceName: cockroachdb
  replicas: 1
  selector:
    matchLabels:
      app: cockroachdb
  template:
    metadata:
      labels:
        app: cockroachdb
    spec:
      containers:
      - name: cockroachdb
        image: cockroachdb/cockroach:v23.1.13
        ports:
        - containerPort: 26257
          name: grpc
        - containerPort: 8080
          name: http
        command:
        - "/bin/bash"
        - "-ecx"
        - |
          exec /cockroach/cockroach start-single-node \
          --certs-dir=/cockroach/cockroach-certs \
          --advertise-host=cockroachdb \
          --http-addr=0.0.0.0:8080 \
          --listen-addr=0.0.0.0:26257 \
          --accept-sql-without-tls
        volumeMounts:
        - name: datadir
          mountPath: /cockroach/cockroach-data
        - name: certs
          mountPath: /cockroach/cockroach-certs
          readOnly: true
      volumes:
      - name: certs
        secret:
          secretName: cockroachdb-certs
          defaultMode: 256
  volumeClaimTemplates:
  - metadata:
      name: datadir
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
