infrastructure/k8s/databases/cockroachdb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cockroachdb
  namespace: thisjowi
  annotations:
    traefik.ingress.kubernetes.io/service.serverstransport: thisjowi-cockroach-transport@kubernetescrd
    config.linkerd.io/skip-outbound-ports: "8080,26257"
    config.linkerd.io/skip-inbound-ports: "8080,26257"
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: grpc
    port: 26257
    targetPort: 26257
  selector:
    app: cockroachdb
