infrastructure/k8s/databases/cockroachdb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cockroachdb-ingress
  namespace: thisjowi
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/service.serversscheme: http
    traefik.ingress.kubernetes.io/service.serverstransport: thisjowi-cockroach-transport@kubernetescrd
spec:
  rules:
  - host: db.thisjowi.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cockroachdb
            port:
              number: 8080
